# HEPROBench

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  run_demo.sh
checkpoints/: cut_tiny.pt  dpt_fm_conch_tiny.pt  dpt_fm_hoptimus0_tiny.pt  gigatime_tiny.pt  hex_tiny.pt  miphei_vit_tiny.pt  pytorch_cyclegan_and_pix2pix_tiny.pt  rosie_tiny.pt
configs/: demo.yaml
configs/methods/: cut.yaml  dpt_fm_conch.yaml  dpt_fm_hoptimus0.yaml  gigatime.yaml  hex.yaml  miphei_vit.yaml  pytorch_cyclegan_and_pix2pix.yaml  rosie.yaml
demo_data/: channel_names.json  metadata.csv
demo_data/targets/: slide_001_patch_0_0.npy  slide_001_patch_0_1.npy  slide_001_patch_1_0.npy  slide_001_patch_1_1.npy  slide_002_patch_0_0.npy  slide_002_patch_0_1.npy  slide_002_patch_1_0.npy  slide_002_patch_1_1.npy
docs/: data_format.md  methods.md  review_notes.md  submission_format.md
heprobench/: __init__.py  cli.py  config.py  evaluate.py  infer.py  io_h5.py  metrics.py  schema.py  train.py  validate.py
methods/: __init__.py  common.py  simple_adapters.py
methods/cut/: __init__.py  model.py
methods/dpt_fm/: __init__.py  model.py
methods/gigatime/: __init__.py  model.py
methods/hex/: __init__.py  model.py
methods/miphei_vit/: __init__.py  model.py
methods/pathology-foundation-models/: README.md  registry.json
methods/pfm/: __init__.py  registry.py  tiny_encoder.py
methods/pytorch_cyclegan_and_pix2pix/: __init__.py  model.py
methods/rosie/: __init__.py  model.py
scripts/: prepare_demo_data.py
