[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heprobench-review"
version = "0.1.0"
description = "Runnable HEPROBench review demo with synthetic data and tiny foundation-model method implementations."
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1",
  "torchvision>=0.16",
  "numpy>=1.24",
  "Pillow>=10.0",
  "h5py>=3.9",
  "PyYAML>=6.0",
]

[project.scripts]
heprobench = "heprobench.cli:main"

[tool.setuptools.packages.find]
include = ["heprobench*", "methods*"]

